# subtext

./: .gitignore  CMakeLists.txt  LICENSE  build instructions windows.md  meson.build  pyproject.toml
.github/workflows/: build.yml
docs/: subtext.rst
msvc_project/: SubText.sln  SubText.vcxproj  SubText.vcxproj.filters
src/: common.c  common.h  image.cpp  text.c  toass.cpp
